# bin-serialization-rs

./: Cargo.toml  README.md
src/: lib.rs
