[package]
name = "bin-serialization-rs"
version = "0.1.5"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cp866-rs = { git = "https://github.com/madwareru/cp866-rs", version = "0.1.2"}